--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fontawesome": "^5.6.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
